# luabsge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  annotations.lua  debug.sh  document.sh  install_emscripten.sh  makefile  run.sh  run_browser.sh  run_ncomp.sh  run_web.sh  run_web_update_files.sh  run_win.bat  setup.sh  setup_web.sh  setup_web_release.sh  setup_win.bat  setup_win.sh  what.txt
projects/: annotations.d.lua
projects/blackshibe/: config.lua  entry.lua  imgui.ini  other-scene.lua
projects/blackshibe/script/: spring.lua
projects/blackshibe/shader/: glitch_frag.glsl
projects/blackshibe/shader/gizmo/: vertex_default.glsl
projects/blackshibe/shader/mesh/: vertex_default.glsl
projects/common/mesh/: eotech.fbx
projects/common/shader/mesh/: frag_default.glsl  vertex_default.glsl
projects/export/: download_assets.py  export.lua
projects/export/filemesh/: README.md  main.cpp
projects/export/in/: Exporter.rbxl  datamodel.json  meshes.csv
projects/main/blackshibe/: assets.lua  entry-wallpaper.lua  entry.lua  imgui.ini  other-scene.lua
projects/main/blackshibe/script/: camera_controller.lua  max_axis_resize.lua  spring.lua
projects/main/blackshibe/shader/: glitch_frag.glsl
projects/main/blackshibe/shader/font/: text_frag.glsl
projects/main/blackshibe/shader/mesh/: frag_default.glsl
projects/main/raytracer/: config.lua  entry.lua  imgui.ini  scene-box.lua  scene-spheres.lua
projects/main/raytracer/shader/raytracer/: frag_default.glsl
projects/main/refactor/: config.lua  entry.lua
projects/main/snn_test/: README.md  config.lua  entry.lua  imgui.ini  preferences.json  types.lua
projects/main/snn_test/bsge/: init.lua
projects/main/snn_test/persistence/: prefs.lua
projects/main/snn_test/program/: base_test.lua  simon_says.lua
projects/main/snn_test/snn/: config.lua
projects/main/snn_test/ui/: graphed.lua  network.lua  plot.lua  plot_inputs_for_program.lua
projects/main/snn_test/ui/window/: inputs.lua  plot.lua  program.lua  speed.lua  state.lua  stats.lua  visualization.lua
projects/minimal/native_test/: entry.lua  imgui.ini
projects/minimal/web_test/: entry.lua
projects/minimal/web_test/shader/font/: text_vert.glsl
projects/minimal/web_test/shader/mesh/: frag_default.glsl
projects/other/export/: README.md  run.sh
projects/other/export/in/: images.csv
projects/raytracer/: config.lua  entry.lua  imgui.ini  scene-box.lua  scene-spheres.lua  scene.lua
projects/raytracer/shader/: frag_default.glsl  raytracer.frag
projects/raytracer/shader/raytracer/: frag_default copy.glsl  frag_default.ai.glsl  frag_default.glsl  frag_default.glsl.backup
projects/raytracer/shader/rt/unity/: RaytracerBlitRenderFeature.cs  frag_default.glsl.unity
projects/raytracer/tester/test/: image.lua
projects/refactor/: config.lua  entry.lua
projects/test/: README.md  config.lua  entry.lua  entry.lua.old  imgui.ini  target.lua  test.lua
projects/test/shader/: frag_default.glsl  vertex_default.glsl
projects/test/shader/font/: text_frag.glsl  text_nosampling_frag.glsl  text_vert.glsl
projects/test/shader/gizmo/: frag_default.glsl  vertex_default.glsl
projects/test/shader/mesh/: vertex_default.glsl
projects/test/tester/: loader.lua
projects/webtest/: entry.lua  scene.lua  web.html
projects/webtest/shader/font/: text_nosampling_frag.glsl
projects/webtest/shader/gizmo/: frag_default.glsl
projects/webtest/shader/mesh/: frag_default.glsl  vertex_default.glsl
projects/webtest/shader/raytracer/: frag_default.ai.glsl  vertex_simple.glsl
src/: engine.h  interop.cpp  interop.h  main.cpp  main.h
src/glad/: glad.cpp  glad.h
src/include/: colors.h
src/include/imgui/: imgui.cpp  imgui.h  imgui_impl_glfw.cpp
src/include/implot/: implot.h  implot_internal.h  implot_items.cpp
src/lua/: config.cpp  config.h  emscripten.cpp  emscripten.h  lua.cpp  lua.h  luax.cpp  luax.h
src/lua/class/: camera.cpp  camera.h  color.cpp  color.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  gizmo.cpp  gizmo.h  image.cpp  image.h  input.cpp  input.h  mesh.cpp  mesh.h  physics.cpp  physics.h  shader.cpp  shader.h  signal.cpp  signal.h  template.cpp  template.h  textlabel.cpp  textlabel.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vfx.cpp  vfx.h
src/lua/class/neural/: bindings.cpp  bindings.h  network.cpp  network.h  neuron.cpp  neuron.h
src/lua/class/rt/: mesh_tbo.cpp  mesh_tbo.h  sphere_tbo.cpp  sphere_tbo.h  tbo.cpp  tbo.h
src/lua/class/struct/: mesh.h
src/lua/ecs/: mesh_component.h  object.cpp  object.h  static_registry.cpp  static_registry.h
src/lua/module/: font.cpp  font.h  lua_font.cpp  lua_glm_bindings.cpp  lua_glm_bindings.h  lua_imgui_bindings.cpp  lua_imgui_bindings.h  lua_implot_bindings.cpp  lua_implot_bindings.h  lua_opengl_constants.cpp  lua_opengl_constants.h  lua_rendering.cpp  lua_rendering.h  lua_ui.cpp  lua_ui.h  lua_window.cpp  lua_window.h  meshloader.cpp  meshloader.h  rendering.cpp  rendering.h  ui.cpp  ui.h
src/opengl/: camera.cpp  freetype.cpp  freetype.h  shader.cpp  shader.h  vfx_effect.cpp  vfx_effect.h  window.cpp  window.h
src/physics/: jolt.cpp  jolt.h
src/web/: download_image.cpp  download_image.h
util/: document.py
util/unused/: debug.sh  install.sh
